@@ -1,3 +1,6 @@
+06/05/08 Bastien Boussau & Simon Carrignon
+* Bug fixed in TreeTools::getLastCommonAncestor.
+
 04/04/08 Julien Dutheil
 * Bug fixed in copy ocnstructors: now NH models work with covarions.
 
